0319 폴더에 코드 병합

--- a/0319.html
+++ b/0319.html
@@ -46,7 +46,7 @@
                             <h4>프로그래머스만의 채용 프로그램을 만나보세요.</h4>
                             <a href="#">시작하기</a>
                     </div>
-                    <img style="width: auto; max-height: 21.875rem;" src="https://programmers.co.kr/packs/img-root-catch-1-9e73217e96a367e6690c57fb02d98a7a.png" alt="" class="hero_img">
+                    <img style="max-width: 600px; height: auto;" src="https://programmers.co.kr/packs/img-root-catch-1-9e73217e96a367e6690c57fb02d98a7a.png" alt="" class="hero_img">
                 </div>
                 
             </section>
